# base_seo_description

./: .env  pyproject.toml  run_base.py  run_project.bat
client/data/backup_db/: attributes.csv  attributes.parquet  series.parquet
client/data/base_description/: description.xlsx
client/data/input_data/: Test_pack_box.xlsx  attr name_value.csv  censor_vendor_codes.xlsx  input_data_vendor_codes.xlsx  output_data_vendor_codes.xlsx  test_03.02.xlsx  test_24.01.xlsx  test_photo_frame_12.03.xlsx  test_shampoo_03.03.xlsx  Косметика.xlsx  Ленты.xlsx  Фигурки.xlsx  арты в работу ленты для рукодел вб.xlsx  арты в работу фигурки вб.xlsx
client/data/output_data/: Ленты.xlsx  Фигурки.xlsx
client/data/templates/: template_1c.xlsx  template_wb.xlsx
client/logs/: config.json
client/src/: run_base.py
client/src/gen_description/: prepare_base_data.py
client/src/prompts/description_attributes/: stage_1.txt  validate_instruction.txt
client/src/sima_grpc/: api.py
client/src/sima_grpc/protobuf_grpc/: my_test.py  product_event_pb2.py  product_pb2.py  product_pb2_grpc.py
client/src/staff_utils/: add_data_to_template.py  json_to_excel.py  json_to_parquete.py
